--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
               <div class="project-header">
                 <div class="project-icon">
                   <img
-                    src="images/apod_oct31_2008.jpg"
+                    src="images/hypercoin_info_icon.jpg"
                     alt="hypercoin.info project icon"
                     class="profile-image"
                   />
@@ -679,26 +679,14 @@
               <h2>About hypercoin</h2>
               <p>
                 I'm an intermediate developer passionate about Bitcoin and
-                open-source software. With experience in multiple programming
-                languages and a commitment to FOSS principles, I focus on
-                building tools that make Bitcoin more accessible and
-                developer-friendly.
-              </p>
-              <p>
-                My journey in Bitcoin development started with curiosity and has
-                evolved into active contributions to the ecosystem. I believe in
-                the power of open collaboration and the importance of financial
-                sovereignty through decentralized technology.
+                open-source software.
               </p>
               <div class="skills">
                 <span class="skill">Python</span>
                 <span class="skill">Go</span>
                 <span class="skill">C#</span>
-                <span class="skill">JavaScript</span>
-                <span class="skill">Bitcoin Core</span>
-                <span class="skill">Lightning Network</span>
-                <span class="skill">FOSS Development</span>
-                <span class="skill">Git</span>
+                <span class="skill">Powershell</span>
+                <span class="skill">Web Development</span>
               </div>
             </div>
           </div>
