site consistency/info accuracy

--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
                 <div class="project-title">hypercoin.info</div>
               </div>
               <div class="project-description">
-                A comprehensive Bitcoin and macro research site.
+                A comprehensive Bitcoin analysis tool site.
               </div>
               <div class="project-tech">
                 <span class="tech-tag">JavaScript</span>
@@ -685,8 +685,9 @@
                 <span class="skill">Python</span>
                 <span class="skill">Go</span>
                 <span class="skill">C#</span>
-                <span class="skill">Powershell</span>
+                <span class="skill">Shell</span>
                 <span class="skill">Web Development</span>
+                <span class="skill">DevOps</span>
               </div>
             </div>
           </div>
