--- a/index.html
+++ b/index.html
@@ -8,12 +8,21 @@
       name="description"
       content="Bitcoin FOSS development projects and contributions by hypercoin developer"
     />
+    <meta property="og:title" content="hypercoin.dev - FOSS developer projects" />
+    <meta property="og:description" content="Bitcoin FOSS development projects and contributions by hypercoin developer" />
+    <meta property="og:image" content="images/hypercoind_pfp.jpg" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:image" content="images/hypercoind_pfp.jpg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600&family=Inter:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/jpeg" href="images/hypercoind_pfp.jpg" />
+    <link rel="shortcut icon" type="image/jpeg" href="images/hypercoind_pfp.jpg" />
+    <link rel="apple-touch-icon" href="images/hypercoind_pfp.jpg" />
     <style>
       :root {
         --primary-orange: #f7931a;
