--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>hypercoin.dev - FOSS developer projects</title>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline' fonts.googleapis.com; font-src 'self' fonts.gstatic.com; img-src 'self' data:; script-src 'self'; connect-src 'self';" />
+    <meta http-equiv="X-Frame-Options" content="DENY" />
+    <meta http-equiv="X-Content-Type-Options" content="nosniff" />
+    <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin" />
+    <meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()" />
     <meta
       name="description"
       content="Bitcoin FOSS development projects and contributions by hypercoin developer"
@@ -14,11 +19,12 @@
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:image" content="images/hypercoind_pfp.jpg" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600&family=Inter:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
+      crossorigin="anonymous"
     />
     <link rel="icon" type="image/jpeg" href="images/hypercoind_pfp.jpg" />
     <link rel="shortcut icon" type="image/jpeg" href="images/hypercoind_pfp.jpg" />
@@ -569,7 +575,7 @@
               <div class="project-header">
                 <div class="project-icon">
                   <img
-                    src="images/hypercoin-info-logo.jpg"
+                    src="images/hypercoin.info.jpg"
                     alt="hypercoin.info project icon"
                     class="profile-image"
                   />
@@ -743,12 +749,16 @@
       document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
         anchor.addEventListener("click", function (e) {
           e.preventDefault();
-          const target = document.querySelector(this.getAttribute("href"));
-          if (target) {
-            target.scrollIntoView({
-              behavior: "smooth",
-              block: "start",
-            });
+          const href = this.getAttribute("href");
+          // Validate that href is a proper anchor link
+          if (href && href.match(/^#[a-zA-Z][\w-]*$/)) {
+            const target = document.querySelector(href);
+            if (target) {
+              target.scrollIntoView({
+                behavior: "smooth",
+                block: "start",
+              });
+            }
           }
         });
       });
