image update for hypercoin.info

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <div class="project-header">
                 <div class="project-icon">
                   <img
-                    src="images/hypercoin.info.jpg"
+                    src="images/bh_rjn.jpg"
                     alt="hypercoin.info project icon"
                     class="profile-image"
                   />
