style update hero 100vh

--- a/index.html
+++ b/index.html
@@ -99,80 +99,6 @@
                 </a>
               </div>
             </div>
-
-            <!--
-                    <div class="project-card">
-                        <div class="status development">In Development</div>
-                        <div class="project-header">
-                            <div class="project-icon">⚡</div>
-                            <div class="project-title">Lightning Tools</div>
-                        </div>
-                        <div class="project-description">
-                            A collection of developer tools and utilities for Lightning Network development, including payment channel management and routing optimization tools.
-                        </div>
-                        <div class="project-tech">
-                            <span class="tech-tag">Go</span>
-                            <span class="tech-tag">LND</span>
-                            <span class="tech-tag">gRPC</span>
-                            <span class="tech-tag">Docker</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="#" class="project-link">
-                                GitHub ↗
-                            </a>
-                            <a href="#" class="project-link">
-                                Documentation ↗
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="project-card">
-                        <div class="status planning">Planning</div>
-                        <div class="project-header">
-                            <div class="project-icon">🔧</div>
-                            <div class="project-title">Bitcoin Dev Kit Extensions</div>
-                        </div>
-                        <div class="project-description">
-                            Contributing to Bitcoin Development Kit (BDK) with focus on wallet functionality improvements and Python bindings for educational purposes.
-                        </div>
-                        <div class="project-tech">
-                            <span class="tech-tag">Rust</span>
-                            <span class="tech-tag">Python</span>
-                            <span class="tech-tag">BDK</span>
-                            <span class="tech-tag">Descriptors</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="#" class="project-link">
-                                Roadmap ↗
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="project-card">
-                        <div class="status development">In Development</div>
-                        <div class="project-header">
-                            <div class="project-icon">📚</div>
-                            <div class="project-title">FOSS Contributor Guide</div>
-                        </div>
-                        <div class="project-description">
-                            An interactive guide for newcomers to Bitcoin FOSS development, featuring step-by-step tutorials, code examples, and contribution workflows.
-                        </div>
-                        <div class="project-tech">
-                            <span class="tech-tag">TypeScript</span>
-                            <span class="tech-tag">React</span>
-                            <span class="tech-tag">MDX</span>
-                            <span class="tech-tag">Tutorials</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="#" class="project-link">
-                                Preview ↗
-                            </a>
-                            <a href="#" class="project-link">
-                                GitHub ↗
-                            </a>
-                        </div>
-                    </div>
-                -->
           </div>
         </div>
       </section>
@@ -222,13 +148,9 @@
               <span>🐙</span>
               <span>GitHub</span>
             </a>
-            <a href="https://twitter.com/hypercoind" class="contact-link">
+            <a href="https://x.com/hypercoind" class="contact-link">
               <span>🐦</span>
-              <span>Twitter</span>
-            </a>
-            <a href="https://hypercoin.info" class="contact-link">
-              <span>🌐</span>
-              <span>hypercoin.info</span>
+              <span>X</span>
             </a>
           </div>
         </div>
